tests/fixtures/invalid/port_io/port_io_outside_unsafe.lby
# Port I/O is a raw hardware operation: `in`/`out` drive a device directly and
# cannot be checked by the compiler, so they require an `unsafe` block exactly
# like the raw-pointer builtins. Outside one: L0330.
no-runtime

fn main -> i64
    port_out8(0x20u16, 0x20u8)
    0
